Add tweet media
