# plato/src/twitter/infrastructure/controller/twitter_controller.py
@@ -1,6 +1,6 @@
 from flask import Blueprint, request, jsonify
 from flask_jwt_extended import jwt_required, get_current_user
-from werkzeug.exceptions import Unauthorized, BadRequest
+from werkzeug.exceptions import NotFound, Unauthorized, BadRequest
 from ...application.account_dto import AccountDTO
 from ..tweet_dto import TweetDTO
 from ..service.twitter_service import TwitterService
@@ -88,6 +88,37 @@ def schedule_tweet(**kw):
     return jsonify(success=True)
 
 
+@twitterFlaskBlueprint.route('/tweet/<string:tweetId>/media/', methods=["POST"])
+@jwt_required()
+def upload_tweet_media(tweetId: str = None, **kw):
+    currentUserId: str = get_current_user()
+    if not currentUserId:
+        raise Unauthorized("Only logged users can get Tweets")
+
+    if not tweetId:
+        raise BadRequest("No tweet was specified")
+
+    if 'file' not in request.files:
+        raise BadRequest("There is no media in the request")
+
+    media = request.files['file']
+    if media.filename == '':
+        raise BadRequest("No selected media in the request")
+
+    twitterService: TwitterService = TwitterService()
+    tweet = twitterService.getTweetById(tweetId)
+    if not tweet:
+        raise NotFound("Tweet was not found")
+
+    account = twitterService.getAccount(tweet["accountId"])
+
+    if account["userId"] != currentUserId:
+        raise Unauthorized("Trying to get tweets from other user")
+
+    twitterService.addMediaToTweet(tweetId, media)
+    return jsonify(success=True)
+
+
 @twitterFlaskBlueprint.route('/tweet/<string:accountId>/', methods=["GET"])
 @jwt_required()
 def get_schedule_tweets(accountId: str = None, **kw):
@@ -105,7 +136,7 @@ def get_schedule_tweets(accountId: str = None, **kw):
 
     afterDate = request.args.get("sinceDate") or 0
     beforeDate = request.args.get("limitDate") or TIMESTAMP_3021
-    tweets: dict = twitterService.getTweetsByAccount(accountId, afterDate, beforeDate)
+    tweets: dict = twitterService.getTweetsByAccount(accountId, int(afterDate), int(beforeDate))
     return jsonify(tweets), 200
 
 
@@ -128,7 +159,7 @@ def get_tweet_reports(tweetId: str = None, **kw):
 
     afterDate = request.args.get("sinceDate") or 0
     beforeDate = request.args.get("limitDate") or TIMESTAMP_3021
-    tweetReports: list = twitterService.getTweetReportsByTweet(tweetId, afterDate, beforeDate)
+    tweetReports: list = twitterService.getTweetReportsByTweet(tweetId, int(afterDate), int(beforeDate))
     return jsonify(tweetReports), 200
 
 
@@ -150,7 +181,7 @@ def get_account_reports(accountId: str = None, **kw):
 
     afterDate = request.args.get("sinceDate") or 0
     beforeDate = request.args.get("limitDate") or TIMESTAMP_3021
-    tweetReports: list = twitterService.getAccountReportsByAccount(accountId, afterDate, beforeDate)
+    tweetReports: list = twitterService.getAccountReportsByAccount(accountId, int(afterDate), int(beforeDate))
     return jsonify(tweetReports), 200
 
 
